--- a/index-dificil.html
+++ b/index-dificil.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="styles-dificil.css">
 </head>
 
-<div class="painel"></div>
-
 <body>
 
     <div class="conteudo">
@@ -20,20 +18,23 @@
             acertar o
             número aleatório.<br>Boa sorte!</p>
 
-        <h2>tente adivinhar o número</h2>
+        <h2>tente adivinhar ↓ o número ↓</h2>
 
 
     </div>
 
-    <input type="number" id="palpite" placeholder="Digite seu palpite (1-50)" min="1" max="50">
+<div class="painel">
+
+    <input type="number" id="palpite" placeholder="Digite seu palpite" min="1" max="50">
 
     <button id="reiniciar" style="display:none;">Reiniciar</button>
 
-    <button class="botao-3" onclick="window.location.href='./index-extremo.html'">Ir para o Próximo Nível</button>
-
+      <p id="tentativas" class="p3"></p> <!-- Aqui mostramos as tentativas restantes -->
     <p id="resultado" class="p2"></p> <!-- Aqui vamos mostrar o resultado -->
-    <p id="tentativas" class="p3"></p> <!-- Aqui mostramos as tentativas restantes -->
 
+ <button class="botao-3" id="next-level" onclick="window.location.href='./index-extremo.html'">Ir para o Próximo Nível</button>
+
+</div>
 
     <img class="imagen" src="./assents/unnamed.png">
 
