--- a/index-extremo.html
+++ b/index-extremo.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="styles-extremo.css">
 </head>
 
-<div class="painel"></div>
-
 <div>
 
     <div class="conteudo">
@@ -19,19 +17,22 @@
         <p>Neste Nível,você vai digitar algum número de 1(um) a 100(cem),você terá 30 (trinta) tentativas de acertar o
             número aleatório.<br>Boa sorte!</p>
 
-        <h2>tente adivinhar o número</h2>
+        <h2>tente adivinhar ↓ o número ↓</h2>
 
     </div>
 
-    <input type="number" id="palpite" placeholder="Digite seu palpite (1-100)" min="1" max="100">
+<div class="painel">
+
+    <input type="number" id="palpite" placeholder="Digite seu palpite" min="1" max="100">
 
     <button id="reiniciar" style="display:none;">Reiniciar</button>
 
-    <button class="botao-4" onclick="window.location.href='./index.html'">Voltar para o Menu</button>
-
+     <p id="tentativas" class="p3"></p> <!-- Aqui mostramos as tentativas restantes -->
     <p id="resultado" class="p2"></p> <!-- Aqui vamos mostrar o resultado -->
-    <p id="tentativas" class="p3"></p> <!-- Aqui mostramos as tentativas restantes -->
 
+   <button class="botao-4" id="next-level" onclick="window.location.href='./index.html'">Voltar para o Menu</button>
+
+    </div>
 
     <img class="imagen" src="./assents/unnamed.png">
 
