--- a/index-facil.html
+++ b/index-facil.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="styles-facil.css">
 </head>
 
-<div class="painel"></div>
-
 <div>
     <div class="conteudo">
 
@@ -18,18 +16,27 @@
         <p>Neste Nível,você vai digitar algum número de 1(um) a 10(dez),e terá 3 (três) tentativas de acertar o
             número aleatório.<br>Boa sorte!</p>
 
-        <h2>tente adivinhar o número</h2>
+        <h2>tente adivinhar ↓ o número ↓</h2>
 
     </div>
 
-    <input type="number" id="palpite" placeholder="Digite seu palpite (1-10)" min="1" max="10" required>
+    <div class="painel">
 
-    <button id="reiniciar" style="display:none;">Reiniciar</button>
+        <div class="input-group">
 
-    <button class="botao-1" onclick="window.location.href='./index-medio.html'">Ir para o Próximo Nível</button>
+        <input type="number" id="palpite" placeholder="Digite seu palpite" min="1" max="10" required>
 
-    <p id="resultado" class="p2"></p>
-    <p id="tentativas" class="p3"></p>
+        <button id="reiniciar" style="display:none;">Reiniciar</button>
+
+        </div>
+
+        <p id="tentativas" class="p3"></p>
+        <p id="resultado" class="p2"></p>
+
+        <button class="botao-1" id="next-level" onclick="window.location.href='./index-medio.html'">Ir para o Próximo
+            Nível</button>
+
+    </div>
 
     <img class="imagen" src="./assents/unnamed.png">
 
