--- a/index-medio.html
+++ b/index-medio.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="styles-medio.css">
 </head>
 
-<div class="painel"></div>
-
-<div>
+<body>
 
     <div class="conteudo">
 
@@ -19,18 +17,23 @@
         <p>Neste Nível,você vai digitar algum número de 1(um) a 20(vinte),você terá 7 (sete) tentativas de acertar o
             número aleatório.<br>Boa sorte!</p>
 
-        <h2>tente adivinhar o número</h2>
+        <h2>tente adivinhar ↓ o número ↓</h2>
 
     </div>
 
-    <input type="number" id="palpite" placeholder="Digite seu palpite (1-20)" min="1" max="20" required>
+    <div class="painel">
 
-    <button id="reiniciar" style="display:none;">Reiniciar</button>
+        <input type="number" id="palpite" placeholder="Digite seu palpite" min="1" max="20" required>
 
-    <button class="botao-2" onclick="window.location.href='./index-dificil.html'">Ir para o Próximo Nível</button>
+        <button id="reiniciar" style="display:none;">Reiniciar</button>
 
-    <p id="resultado" class="p2"></p> <!-- Aqui vamos mostrar o resultado -->
-    <p id="tentativas" class="p3"></p> <!-- Aqui mostramos as tentativas restantes -->
+        <p id="tentativas" class="p3"></p> <!-- Aqui mostramos as tentativas restantes -->
+        <p id="resultado" class="p2"></p> <!-- Aqui vamos mostrar o resultado -->
+
+ <button class="botao-2" id="next-level" onclick="window.location.href='./index-dificil.html'">Ir para o Próximo
+            Nível</button>
+
+    </div>
 
     <img class="imagen" src="./assents/unnamed.png">
 
@@ -58,8 +61,8 @@
     </div>
 
 
-    </body>
+</body>
 
-    <script src="scripts-medio.js"></script>
+<script src="scripts-medio.js"></script>
 
 </html>
