alterações nos códigos responsivos

--- a/index-facil.html
+++ b/index-facil.html
@@ -16,7 +16,7 @@
         <p>Neste Nível,você vai digitar algum número de 1(um) a 10(dez),e terá 3 (três) tentativas de acertar o
             número aleatório.<br>Boa sorte!</p>
 
-        <h2>tente adivinhar ↓ o número ↓</h2>
+        <h2>tente adivinhar <br>↓ o número ↓</h2>
 
     </div>
 
