--- a/index-dificil.html
+++ b/index-dificil.html
@@ -18,7 +18,7 @@
             acertar o
             número aleatório.<br>Boa sorte!</p>
 
-        <h2>tente adivinhar ↓ o número ↓</h2>
+        <h2>tente adivinhar <br>↓ o número ↓</h2>
 
 
     </div>
