--- a/index-extremo.html
+++ b/index-extremo.html
@@ -17,7 +17,7 @@
         <p>Neste Nível,você vai digitar algum número de 1(um) a 100(cem),você terá 30 (trinta) tentativas de acertar o
             número aleatório.<br>Boa sorte!</p>
 
-        <h2>tente adivinhar ↓ o número ↓</h2>
+        <h2>tente adivinhar <br>↓ o número ↓</h2>
 
     </div>
 
