--- a/index-medio.html
+++ b/index-medio.html
@@ -17,7 +17,7 @@
         <p>Neste Nível,você vai digitar algum número de 1(um) a 20(vinte),você terá 7 (sete) tentativas de acertar o
             número aleatório.<br>Boa sorte!</p>
 
-        <h2>tente adivinhar ↓ o número ↓</h2>
+        <h2>tente adivinhar <br>↓ o número ↓</h2>
 
     </div>
 
